Fixed jumping animation issue

--- a/src/app/features/play/components/mole/mole.component.scss
+++ b/src/app/features/play/components/mole/mole.component.scss
@@ -1,10 +1,11 @@
 .mole {
-  height: 5rem;
-  width: 4rem;
+  height: 50%;
+  width: 50%;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   bottom: -100%;
+  will-change: bottom, animation-duration, animation-delay;
   background-color: yellow;
 
   &:hover {
@@ -13,6 +14,7 @@
 
   &.animate {
     animation-name: moveUpDown;
+    animation-duration: 7s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
   }
